--- a/index.html
+++ b/index.html
@@ -1,22 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant Menu</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Food Menu</title>
+        <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    </head>
+
 <body>
+    <header class="topbar">
+        <h1 class="right">
+            <li><a class="home" href="index.html">Home</a></li>
+        </h1>
 
-<header>
-    <h1>Choose Your Food Style</h1>
-</header>
+        <h1 class="left">
+            <li><a href="shoppinglist.html">Shoppinglist</a></li>
+            <li><a href="admin.html">Admin</a></li>
+        </h1>
+    </header>
 
-<div class="options-container">
-    <button onclick="location.href='menu.html?style=Chinese'">Chinese</button>
-    <button onclick="location.href='menu.html?style=Japanese'">Japanese</button>
-    <button onclick="location.href='menu.html?style=Italian'">Italian</button>
-</div>
+    <aside class="options-container">
+        <h2>Main menu</h2>
+        <article class="sidebar">
+            <button onclick="location.href='menu.html?style=Chinese'">Chinese</button>
+            <button onclick="location.href='menu.html?style=Japanese'">Japanese</button>
+            <button onclick="location.href='menu.html?style=UK'">UK</button>
+        </article>
 
+    </aside>
+
+    <main class="main">
+        <article class="menu-container" id="menu-container">
+            <h2 class="menu-container" id="menu-container">test</h2>
+            <button id="addpage" class="fa fa-plus" onclick="addpage()"></button>
+        </article>
+
+    </main>
+
+
+
+    <script defer src="index.js"></script>
 </body>
+
 </html>
