--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
     <header class="topbar">
         <h1 class="right">
-            <li><a class="home" href="index.html">Home</a></li>
+            <li><a class="home" href="index.html"><i class="fa fa-home"></i></a></li>
         </h1>
 
         <h1 class="left">
-            <li><a href="shoppinglist.html">Shoppinglist</a></li>
-            <li><a href="admin.html">Admin</a></li>
+            <li><a href="shoppinglist.html"><i class="material-icons">shopping_cart</i></a></li>
+            <li><a href="admin.html"><i class="material-icons">person</i></a></li>
         </h1>
     </header>
 
@@ -34,7 +34,7 @@
 
     <main class="main">
         <article class="menu-container" id="menu-container">
-            <h2 class="menu-container" id="menu-container">test</h2>
+            <h2 class="calander" id="calander">test</h2>
             <button id="addpage" class="fa fa-plus" onclick="addpage()"></button>
         </article>
 
