--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         </h1>
 
         <h1 class="left">
-            <li id="language" class="language">
+            <li id="language" class="language"><a href="indexcn.html">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/5/5b/Flag_of_Hong_Kong.svg" alt="hongkong Flag" class="flag-icon">
+            </a></li>
             </li>
             <li><a href="shoppinglist.html"><i class="material-icons">shopping_cart</i></a></li>
             <li><a href="admin.html"><i class="material-icons">person</i></a></li>
@@ -33,8 +34,9 @@
             <button onclick="location.href='menu.html?style=Japanese'">Japanese</button>
             <button onclick="location.href='menu.html?style=HongKong'">HK</button>
             <button onclick="location.href='menu.html?style=UK'">UK</button>
-
-            
+            <button onclick="location.href='menu.html?style=Drink'">Drink</button>
+            <button onclick="location.href='menu.html?style=Dessert'">Dessert</button>
+            <button onclick="location.href='menu.html?style=Sauce'">Sauce</button>
         </article>
 
     </aside>
