--- a/menu.html
+++ b/menu.html
@@ -17,21 +17,19 @@
         <h1 class="right">
             <li><a class="home" href="index.html"><i class="fa fa-home"></i></a></li>
         </h1>
-
         <h1 class="left">
-            <li id="language" class="language"><a href="indexcn.html">
+            <li id="language" class="language"><a href="#">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/5/5b/Flag_of_Hong_Kong.svg" alt="hongkong Flag" class="flag-icon">
             </a></li>
-            </li>
-            <li><a href="shoppinglist.html"><i class="material-icons">shopping_cart</i></a></li>
-            <li><a href="admin.html"><i class="material-icons">person</i></a></li>
-            
+            <li><a href="#"><i class="material-icons">shopping_cart</i></a></li>
+            <li><a href="#"><i class="material-icons">person</i></a></li>
         </h1>
     </header>
 
     <aside class="options-container">
         <h2 id="menuHeader"></h2>
         <article class="sidebar">
+            <button onclick="location.href='alldish.html'">All Dish</button>
             <button onclick="location.href='menu.html?style=Chinese'">Chinese</button>
             <button onclick="location.href='menu.html?style=Japanese'">Japanese</button>
             <button onclick="location.href='menu.html?style=HongKong'">HK</button>
@@ -39,7 +37,6 @@
             <button onclick="location.href='menu.html?style=Drink'">Drink</button>
             <button onclick="location.href='menu.html?style=Dessert'">Dessert</button>
             <button onclick="location.href='menu.html?style=Sauce'">Sauce</button>
-
         </article>
 
     </aside>
