--- a/index.html
+++ b/index.html
@@ -10,30 +10,28 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     </head>
 
-<body>
+    <body data-background="png/pexels-ella-olsson-572949-1640773.jpg">
     <header class="topbar">
         <h1 class="right">
             <li><a class="home" href="index.html"><i class="fa fa-home"></i></a></li>
         </h1>
-
         <h1 class="left">
-            <li id="language" class="language"><a href="indexcn.html">
+            <li id="language" class="language"><a href="#">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/5/5b/Flag_of_Hong_Kong.svg" alt="hongkong Flag" class="flag-icon">
             </a></li>
-            </li>
-            <li><a href="shoppinglist.html"><i class="material-icons">shopping_cart</i></a></li>
-            <li><a href="admin.html"><i class="material-icons">person</i></a></li>
-            
+            <li><a href="#"><i class="material-icons">shopping_cart</i></a></li>
+            <li><a href="#"><i class="material-icons">person</i></a></li>
         </h1>
     </header>
 
     <aside class="options-container">
         <h2>Main menu</h2>
         <article class="sidebar">
+            <button onclick="location.href='alldish.html'">All Dish</button>
             <button onclick="location.href='menu.html?style=Chinese'">Chinese</button>
             <button onclick="location.href='menu.html?style=Japanese'">Japanese</button>
             <button onclick="location.href='menu.html?style=HongKong'">HK</button>
-            <button onclick="location.href='menu.html?style=UK'">UK</button>
+            <button onclick="location.href='menu.html?style=Italy'">Italy</button>
             <button onclick="location.href='menu.html?style=Drink'">Drink</button>
             <button onclick="location.href='menu.html?style=Dessert'">Dessert</button>
             <button onclick="location.href='menu.html?style=Sauce'">Sauce</button>
@@ -42,18 +40,11 @@
     </aside>
 
 
-    <main class="main">
+    <main class="main" >
         <article class="menu-container" id="menu-container">
-            <h2 class="calendar" id="calendar">Your Calendar</h2>
-            <div id="calendarList"></div> <!-- Container for calendar items -->
             <button id="indexaddpage" class="fa fa-plus" onclick="addpage()"></button>
         </article>
 
-        <div class="calendar-container">
-            <h2>Your Selected Foods</h2>
-            <ul id="calendarList"></ul>
-            <button id="addToCalendar">Add to Calendar</button>
-        </div>
 
     </main>
 
