--- a/menu.html
+++ b/menu.html
@@ -45,8 +45,6 @@
         <article class="menu-container" id="menu-container">
             <h2 class="menu-container" id="menuContainer">
             <button id="addpage" class="fa fa-plus" onclick="addpage()"></button>
-            <p></p>
-            <p></p>
             </h2>
 
             <div id="addFoodForm" class="hidden">
@@ -59,14 +57,18 @@
                 <button id="cancelFood" onclick="cancelAdd()">Cancel</button>
             </div>
 
-            <div id="detailModal" class="modal hidden">
-                <div class="modal-content">
+            <div id="detailModal" class="modal hidden" onclick="closeModal(event)">
+                <div class="modal-content" onclick="event.stopPropagation();"> <!-- Prevent click from propagating -->
                     <span class="close" onclick="closeModal()">&times;</span>
                     <h2 id="modalTitle"></h2>
                     <p id="modalItem"></p>
                     <p id="modalRecipe"></p>
                     <p id="modalNote"></p>
                 </div>
+            </div>
+
+            <div class="space">
+                <p></p>
             </div>
 
         </article>
