--- a/alldish.html
+++ b/alldish.html
@@ -53,8 +53,8 @@
                 <button id="cancelFood" onclick="cancelAdd()">Cancel</button>
             </div>
 
-            <div id="detailModal" class="modal hidden">
-                <div class="modal-content">
+            <div id="detailModal" class="modal hidden" onclick="closeModal(event)">
+                <div class="modal-content" onclick="event.stopPropagation();"> <!-- Prevent click from propagating -->
                     <span class="close" onclick="closeModal()">&times;</span>
                     <h2 id="modalTitle"></h2>
                     <p id="modalItem"></p>
