--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
     <main class="main" >
         <article class="menu-container" id="menu-container">
+            <h2 class="calendar" id="calendar">Your Calendar</h2>
             <button id="indexaddpage" class="fa fa-plus" onclick="addpage()"></button>
         </article>
 
