--- a/alldish.html
+++ b/alldish.html
@@ -40,8 +40,7 @@
 
     <main class="main">
         <article class="allDishesContainer" id="allDishesContainer">
-            <h2 class="menu-container" id="menuContainer">
-            </h2>
+            <h2 class="menu-container" id="menuContainer"></h2>
 
             <div id="addFoodForm" class="hidden">
                 <h3>Add New Food Item</h3>
