--- a/alldish.html
+++ b/alldish.html
@@ -12,7 +12,7 @@
 <body>
     <header class="topbar">
         <h1 class="right">
-            <li><a class="home" href="index.html"><i class="fa fa-home"></i></a></li>
+            <li><a class="home" href="index.html?style=index"><i class="fa fa-home"></i></a></li>
         </h1>
         <h1 class="left">
             <li id="language" class="language"><a href="#">
@@ -24,10 +24,10 @@
     </header>
 
     <aside class="options-container">
-        <h2 class="all-menu-h2" id="menuHeader"></h2>
-        <h3>All Dish</h3>
+        <h2 id="menuHeader" class="hidden-title"></h2>
+        <h3>All dish</h3>
         <article class="sidebar">
-            <button onclick="location.href='alldish.html'">All Dish</button>
+            <button onclick="location.href='alldish.html?style=alldish'">All Dish</button>
             <button onclick="location.href='menu.html?style=Chinese'">Chinese</button>
             <button onclick="location.href='menu.html?style=Japanese'">Japanese</button>
             <button onclick="location.href='menu.html?style=HongKong'">HK</button>
@@ -36,6 +36,7 @@
             <button onclick="location.href='menu.html?style=Dessert'">Dessert</button>
             <button onclick="location.href='menu.html?style=Sauce'">Sauce</button>
         </article>
+
     </aside>
 
     <main class="main">
