--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
 <body>
     <header class="topbar">
         <h1 class="right">
-            <li><a class="home" href="index.html"><i class="fa fa-home"></i></a></li>
+            <li><a class="home" href="index.html?style=index"><i class="fa fa-home"></i></a></li>
         </h1>
         <h1 class="left">
             <li id="language" class="language"><a href="#">
@@ -29,7 +29,7 @@
     <aside class="options-container">
         <h2 id="menuHeader"></h2>
         <article class="sidebar">
-            <button onclick="location.href='alldish.html'">All Dish</button>
+            <button onclick="location.href='alldish.html?style=alldish'">All Dish</button>
             <button onclick="location.href='menu.html?style=Chinese'">Chinese</button>
             <button onclick="location.href='menu.html?style=Japanese'">Japanese</button>
             <button onclick="location.href='menu.html?style=HongKong'">HK</button>
